--- a/index.html
+++ b/index.html
@@ -23,22 +23,12 @@
           <li class="nav-item">
             <a class="nav-link text-warning" href="https://x.com/gateslocked/status/1859749733486735428?s=46">Twitter</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-warning" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <li class="nav-item ">
+            <a class="nav-link text-warning" href="https://pump.fun/coin/CuiLXEdjB99Cjdb7p4VQ8DK6q6Wkd5jWn6AVJk5rpump" >
               BUY NOW
             </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-danger" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
@@ -52,7 +42,8 @@
         The “Locked Gates” coin represents a movement to hold Bill Gates accountable for his alleged harm to humanity, including promoting harmful agendas and toxic substances. This coin symbolizes collective resistance, empowering people to unite and generate the resources needed to ensure justice is served. Together, we’re breaking free from control and building a future where the truth prevails. 10% of profits goes to elite lawyers worldwide to take him down.
     </p>
     <br><br>
-<button class="btn cube cube-hover" type="button">
+ 
+  <button class="btn cube cube-hover" type="button">
   <div class="bg-top">
     <div class="bg-inner"></div>
   </div>
@@ -62,8 +53,12 @@
   <div class="bg">
     <div class="bg-inner"></div>
   </div>
-  <div class="text">Contact Address</div>
+  <div>
+  <a class="text" href="https://pump.fun/coin/CuiLXEdjB99Cjdb7p4VQ8DK6q6Wkd5jWn6AVJk5rpump">Contract Address</div>
 </button>
+</a>
+  
+</div>
 
 </body>
 </html>
