--- a/index.html
+++ b/index.html
@@ -59,6 +59,49 @@
 </a>
   
 </div>
+    <br><br><br>
+<blockquote class="twitter-tweet" data-media-max-width="560"><p lang="en" dir="ltr">Bill Gates is one of the biggest proponents of mass depopulation <a href="https://t.co/8WordKlEpu">pic.twitter.com/8WordKlEpu</a></p>&mdash; healthbot (@thehealthb0t) <a href="https://twitter.com/thehealthb0t/status/1793460463000293882?ref_src=twsrc%5Etfw">May 23, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<br><br>
+<blockquote class="twitter-tweet" data-media-max-width="560"><p lang="en" dir="ltr">Errol Musk (Elon’s father) exposes Bill Gates depopulation agenda…🔥🔥🔥 <a href="https://t.co/8nZhBWncIM">pic.twitter.com/8nZhBWncIM</a></p>&mdash; Pelham (@Resist_05) <a href="https://twitter.com/Resist_05/status/1701439293900914743?ref_src=twsrc%5Etfw">September 12, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br><br>
+<blockquote class="twitter-tweet" data-media-max-width="560"><p lang="en" dir="ltr">🚨🚨🚨Bill Gates’s car gets surrounded by very angry people - I think that people know he’s one of the driving forces behind the <a href="https://twitter.com/hashtag/Depopulation?src=hash&amp;ref_src=twsrc%5Etfw">#Depopulation</a> <a href="https://twitter.com/hashtag/Agenda2030?src=hash&amp;ref_src=twsrc%5Etfw">#Agenda2030</a> :<br><br>“MURDERER!!! We know who you are you son of a bitch!!! Arrest, Bill Gates!!!!!”<br><br>In case you haven’t noticed, <a href="https://twitter.com/hashtag/Humanity?src=hash&amp;ref_src=twsrc%5Etfw">#Humanity</a> is… <a href="https://t.co/VSUJTJzgHp">pic.twitter.com/VSUJTJzgHp</a></p>&mdash; Kevin - WE THE PEOPLE🦁 (@bambkb) <a href="https://twitter.com/bambkb/status/1697202927851438376?ref_src=twsrc%5Etfw">August 31, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br><br><br>
+<p2>Here’s a step-by-step guide on how to buy the Locked Gates coin on Pump.fun using Solana:
 
+  Step 1: Set Up a Solana Wallet
+  
+   1. Download a Solana Wallet: Popular options include Phantom, Solflare, or Glow Wallet.
+   2. Create Your Wallet: Follow the on-screen instructions to set up your wallet. Write down your recovery phrase and keep it safe.
+   3. Fund Your Wallet: Purchase Solana (SOL) on an exchange like Binance, Coinbase, or Kraken, and transfer it to your Solana wallet address.
+  
+  Step 2: Connect to Pump.fun
+  
+   1. Open your browser and go to Pump.fun. (https://pump.fun/)
+   2. Click “Connect Wallet” in the top-right corner.
+   3. Choose your wallet (e.g., Phantom) and approve the connection.
+  
+  Step 3: Search for Locked Gates Coin
+  
+   1. Use the search bar on Pump.fun to type in “Locked Gates.”
+   2. Confirm the correct project by verifying details like token ID or description.
+  
+  Step 4: Buy Locked Gates Coin
+  
+   1. Click on the coin’s page to open its details.
+   2. Look for the “Buy” button.
+   3. Enter the amount of SOL you want to spend or the number of coins you want to purchase.
+   4. Approve the transaction in your wallet when prompted.
+  
+  Step 5: Verify Your Purchase
+  
+   1. After completing the transaction, check your wallet to see the Locked Gates tokens.
+   2. If it doesn’t appear immediately, refresh your wallet or manually import the token using the token address provided on Pump.fun.
+  
+  Step 6: Stay Informed
+  
+   1. Follow the Locked Gates community on social platforms for updates.
+   2. Keep your wallet secure and never share your recovery phrase with anyone.
+  
+You’re now a part of the movement!</p2>
 </body>
 </html>
