--- a/index.html
+++ b/index.html
@@ -103,5 +103,16 @@
    2. Keep your wallet secure and never share your recovery phrase with anyone.
   
 You’re now a part of the movement!</p2>
-</body>
+    <script>
+  window.embeddedChatbotConfig = {
+  chatbotId: "jra4RK1bh3sXGXVhRHsMt",
+  domain: "www.chatbase.co"
+  }
+  </script>
+  <script
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="jra4RK1bh3sXGXVhRHsMt"
+  domain="www.chatbase.co"
+  defer>
+  </script></body>
 </html>
