--- a/index.html
+++ b/index.html
@@ -68,7 +68,20 @@
 <blockquote class="twitter-tweet" data-media-max-width="560"><p lang="en" dir="ltr">🚨🚨🚨Bill Gates’s car gets surrounded by very angry people - I think that people know he’s one of the driving forces behind the <a href="https://twitter.com/hashtag/Depopulation?src=hash&amp;ref_src=twsrc%5Etfw">#Depopulation</a> <a href="https://twitter.com/hashtag/Agenda2030?src=hash&amp;ref_src=twsrc%5Etfw">#Agenda2030</a> :<br><br>“MURDERER!!! We know who you are you son of a bitch!!! Arrest, Bill Gates!!!!!”<br><br>In case you haven’t noticed, <a href="https://twitter.com/hashtag/Humanity?src=hash&amp;ref_src=twsrc%5Etfw">#Humanity</a> is… <a href="https://t.co/VSUJTJzgHp">pic.twitter.com/VSUJTJzgHp</a></p>&mdash; Kevin - WE THE PEOPLE🦁 (@bambkb) <a href="https://twitter.com/bambkb/status/1697202927851438376?ref_src=twsrc%5Etfw">August 31, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"> 
 </script>
 <br><br><br>
-<p2>Here’s a step-by-step guide on how to buy the Locked Gates coin on Pump.fun using Solana:
+<script>
+  window.embeddedChatbotConfig = {
+  chatbotId: "jra4RK1bh3sXGXVhRHsMt",
+  domain: "www.chatbase.co"
+  }
+  </script>
+  <script
+  src="https://www.chatbase.co/embed.min.js"
+  chatbotId="jra4RK1bh3sXGXVhRHsMt"
+  domain="www.chatbase.co"
+  defer>
+  </script>
+</body>
+  <footer>Here’s a step-by-step guide on how to buy the Locked Gates coin on Pump.fun using Solana:
 
   Step 1: Set Up a Solana Wallet
   
@@ -104,18 +117,5 @@
    1. Follow the Locked Gates community on social platforms for updates.
    2. Keep your wallet secure and never share your recovery phrase with anyone.
   
-You’re now a part of the movement!</p2>
-<script>
-  window.embeddedChatbotConfig = {
-  chatbotId: "jra4RK1bh3sXGXVhRHsMt",
-  domain: "www.chatbase.co"
-  }
-  </script>
-  <script
-  src="https://www.chatbase.co/embed.min.js"
-  chatbotId="jra4RK1bh3sXGXVhRHsMt"
-  domain="www.chatbase.co"
-  defer>
-  </script>
-</body>
+You’re now a part of the movement!</footer>  
 </html>
