--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body><nav class="navbar navbar-expand-lg bg-success">
     <div class="container-fluid">
-      <a class="navbar-brand text-warning" href="#">Chart</a>
+      <a class="navbar-brand text-warning" href="slotmachine.html">Lottery</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
